--- a/Week1/week1_exps.ipynb
+++ b/Week1/week1_exps.ipynb
@@ -1874,12 +1874,203 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7674a226",
+   "metadata": {},
+   "source": [
+    "## Test different numbers of local features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "90e4807b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "max_features_list = [50, 100, 200, 400, 800]\n",
+    "codebook_size = 800\n",
+    "detector_types = ['SIFT', 'AKAZE', 'ORB']\n",
+    "local_feature_results = {}\n",
+    "\n",
+    "for detector_type in detector_types:\n",
+    "    local_feature_results[detector_type] = {}\n",
+    "    for max_features in max_features_list:\n",
+    "        print(f\"\\n\\nTraining with detector: {detector_type}, max_features: {max_features}\")\n",
+    "        bovw = BOVW(detector_type=detector_type, codebook_size=codebook_size, max_features=max_features)\n",
+    "\n",
+    "        bovw, classifier = exp.train(dataset=data_train, bovw=bovw, map_classes=map_classes, batch_size=100)\n",
+    "\n",
+    "        local_feature_results[detector_type][max_features] = exp.test(\n",
+    "            dataset=data_test,\n",
+    "            bovw=bovw,\n",
+    "            classifier=classifier,\n",
+    "            map_classes=map_classes,\n",
+    "            batch_size=100,\n",
+    "        )\n",
+    "\n",
+    "        metrics = local_feature_results[detector_type][max_features]\n",
+    "        print(\n",
+    "            f\"{detector_type:5s} | max_features={max_features:4d} | F1={metrics['f1_score']:.3f} | AUC={metrics['auc_average']:.3f}\"\n",
+    "        )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c09db81e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot F1-score vs number of local features (one line per detector)\n",
+    "plt.figure(figsize=(9, 6))\n",
+    "\n",
+    "for detector_type in detector_types:\n",
+    "    f1_scores = [local_feature_results[detector_type][mf]['f1_score'] for mf in max_features_list]\n",
+    "    plt.plot(max_features_list, f1_scores, marker='o', linewidth=2, label=detector_type)\n",
+    "\n",
+    "plt.title('F1-score vs Number of Local Features (per Detector)')\n",
+    "plt.xlabel('Number of Local Features (max_features)')\n",
+    "plt.ylabel('F1-score')\n",
+    "plt.grid(True)\n",
+    "plt.xticks(max_features_list)\n",
+    "plt.ylim(0, 1)\n",
+    "plt.legend(title='Detector Type')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8674f41a",
+   "metadata": {},
+   "source": [
+    "The experiment gives us this plot. It shows that performance improves when increasing the number of local features, but only up to a certain point.\n",
+    "After a moderate number of features, the improvement becomes small or may even decrease due to noise or redundancy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "422c0b68",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Play with reducing dimensionality\n",
+    "Provem PCA sobre els histogrames BoVW (codebook de 800) per veure l'impacte de reduir la dimensionalitat i com afecta F1/AUC.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "349d34a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit codebook una vegada i precomputa histogrames per a l'experiment de PCA\n",
+    "base_detector = 'SIFT'\n",
+    "codebook_size = 800\n",
+    "max_features = 400\n",
+    "\n",
+    "bovw = BOVW(detector_type=base_detector, codebook_size=codebook_size, max_features=max_features)\n",
+    "print('Fitting codebook for dimensionality reduction experiment...')\n",
+    "batch_size = 100\n",
+    "for i in range(0, len(data_train), batch_size):\n",
+    "    batch = data_train[i : i + batch_size]\n",
+    "    descriptors_batch = []\n",
+    "    for image, label, img_path in batch:\n",
+    "        _, descriptors = bovw._extract_features(np.array(image))\n",
+    "        if descriptors is not None and len(descriptors) > 0:\n",
+    "            descriptors_batch.append(descriptors)\n",
+    "    if descriptors_batch:\n",
+    "        bovw._update_fit_codebook(descriptors_batch)\n",
+    "\n",
+    "def compute_histograms(bovw, dataset):\n",
+    "    hists, labels = [], []\n",
+    "    for image, label, img_path in dataset:\n",
+    "        _, descriptors = bovw._extract_features(np.array(image))\n",
+    "        if descriptors is not None and len(descriptors) > 0:\n",
+    "            hist = bovw._compute_codebook_descriptor(descriptors, bovw.codebook_algo)\n",
+    "            hists.append(hist)\n",
+    "            labels.append(label)\n",
+    "    return np.array(hists), np.array(labels)\n",
+    "\n",
+    "X_train, y_train = compute_histograms(bovw, data_train)\n",
+    "X_test, y_test = compute_histograms(bovw, data_test)\n",
+    "print(f'Train histograms: {X_train.shape}, Test histograms: {X_test.shape}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b30c92a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Avalua PCA amb diferents dimensions i compara amb no aplicar PCA\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "pca_components = [32, 64, 128, 256, 512, 700]\n",
+    "dim_results = {}\n",
+    "\n",
+    "def fit_and_eval(transform, name):\n",
+    "    clf = LogisticRegression(class_weight='balanced', max_iter=1000)\n",
+    "    model = make_pipeline(transform, clf) if transform is not None else clf\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    dim_results[name] = exp.compute_metrics(y_test, y_pred, map_classes)\n",
+    "\n",
+    "# Baseline sense reducció\n",
+    "fit_and_eval(transform=None, name='no_pca')\n",
+    "\n",
+    "# PCA amb diferents components (només si inferior a la dimensió original)\n",
+    "for n_comp in pca_components:\n",
+    "    if n_comp >= X_train.shape[1]:\n",
+    "        continue\n",
+    "    pca = PCA(n_components=n_comp, random_state=0)\n",
+    "    fit_and_eval(transform=pca, name=f'pca_{n_comp}')\n",
+    "\n",
+    "baseline_f1 = dim_results['no_pca']['f1_score']\n",
+    "print('Dimensionality reduction results:')\n",
+    "for name, metrics in dim_results.items():\n",
+    "    delta = metrics['f1_score'] - baseline_f1\n",
+    "    print(f\"{name:8s} | F1={metrics['f1_score']:.3f} | AUC={metrics['auc_average']:.3f} | dF1={delta:+.3f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "177b3722",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualitza impacte en F1/AUC a mesura que baixem la dimensionalitat\n",
+    "labels = []\n",
+    "f1_scores = []\n",
+    "aucs = []\n",
+    "for name in ['no_pca'] + [f'pca_{n}' for n in pca_components if n < X_train.shape[1]]:\n",
+    "    if name not in dim_results:\n",
+    "        continue\n",
+    "    labels.append(name.replace('no_pca', 'No PCA').replace('pca_', 'PCA '))\n",
+    "    f1_scores.append(dim_results[name]['f1_score'])\n",
+    "    aucs.append(dim_results[name]['auc_average'])\n",
+    "\n",
+    "x = np.arange(len(labels))\n",
+    "width = 0.35\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.bar(x - width/2, f1_scores, width, label='F1-score')\n",
+    "plt.bar(x + width/2, aucs, width, label='AUC')\n",
+    "plt.xticks(x, labels, rotation=20)\n",
+    "plt.ylabel('Score')\n",
+    "plt.title('Impact of dimensionality reduction (PCA) on performance')\n",
+    "plt.ylim(0, 1)\n",
+    "plt.grid(axis='y')\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "plt.savefig('dimensionality_reduction_performance.png')\n"
+   ]
   }
  ],
  "metadata": {
